# BenthicClassifier

./: .gitignore  CMakeLists.txt  COMPILING.md  Makefile  README.md  gmm_trained.model  run.sh  run_lidar.sh  trained.model
models/: MbesGradientBoostingClassifier.model
reflectance/: dev.ipynb  test.py  water_reflectance_MSI.py
script/: change_dpi_exif.bash  classify-mbes-data.bash  classify-mbes-data_in_separate_files.bash  classify-mbes-data_in_single_file.bash  gen_hackel.bash  gen_raster.bash  gen_table_figure.bash  hackelBatch.bash  pipeline.bash
src/: Cell.hpp  Grid.hpp  Point.hpp  apply-gmm-model.py  apply-model.py  apply_both_models.py  compare-ml-algorithms.py  compare-model.py  generate-training-data.py  generate_raster_map.py  gmm-best-fit.py  main.cpp  output.txt  substrate_size-based_train (copy).py  substrate_size-based_train.py  train-model.py  train.py
src/cnn/: perceptron.py
src/cpp/: classify_grid.cpp  gmm-best-fit.py  label_soundings.cpp  soundings_generate_features.cpp
src/cpp/geometry/: Cell.cpp  Cell.hpp  Grid.cpp  Grid.hpp  SoundingPoint.hpp
src/cpp/machinelearning/: DBSCAN-pcl.cpp  DBSCAN-pcl.hpp  DBSCAN.hpp
src/geometry/: Cell.cpp  Cell.hpp  Grid.cpp  Grid.hpp  Point.cpp  Point.hpp
src/io/: ClassificationOutput.cpp  ClassificationOutput.hpp
src/machinelearning/: DBSCAN.cpp  DBSCAN.hpp  dbscan.h
test/: CellTest.hpp  DbscanTest.hpp  GridTest.hpp  OutputDBSCANTest.hpp  main.cpp
test/utils/: TestUtils.hpp
