cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(CLASSIFY_SOUNDINGS)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(soundings_generate_features src/cpp/soundings_generate_features.cpp)
add_executable(label_soundings src/cpp/label_soundings.cpp)
#add_library(DBSCAN src/machinelearning/DBSCAN-pcl.cpp)

target_link_libraries(soundings_generate_features ${PCL_LIBRARIES})
